--- a/movimientos/templates/ordenesCerradas.html
+++ b/movimientos/templates/ordenesCerradas.html
@@ -121,8 +121,9 @@
                         <th class="px-3 py-2 text-left">Creada el</th>
                         <th class="px-3 py-2 text-left">Entregar el</th>
                         <th class="px-3 py-2 text-left">Retirar el</th>
+                        <th class="px-3 py-2 text-left">Asignado a:</th>
+                        <th class="px-3 py-2 text-left">Fecha/Hora asignación:</th>
                         <th class="px-3 py-2 text-left">Acciones</th>
-                        <th class="px-3 py-2 text-left"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -134,6 +135,8 @@
                         <td class="px-3 py-2">{{ c.fecha_creacion }}</td>
                         <td class="px-3 py-2">{{ c.fecha_entrega }}</td>
                         <td class="px-3 py-2 text-red-600">{{ c.fecha_retiro }}</td>
+                        <td class="px-3 py-2">{{ c.asignado_a |default:"" }}</td>
+                        <td class="px-3 py-2">{{ c.fecha_asignacion|default:""}} - {{c.hora_asignacion |default:"" }}</td>
                         <td class="px-3 py-2 flex flex-wrap gap-2">
 
                             <!-- Botón Recibir -->
@@ -151,11 +154,11 @@
                             </a>
 
                             <!-- Botón Etiqueta -->
-                            <a href='/generaPDFprint/{{c.id}}' target="_blank"
+                            <!-- <a href='/generaPDFprint/{{c.id}}' target="_blank"
                                 class="px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded text-xs no-underline font-semibold"
                                 title="Etiqueta">
                                 Etiqueta
-                            </a>
+                            </a> -->
 
                             <!-- Botón Devolución Total -->
                             <a href='/entradatotal/{{c.id_salida}}/{{c.id}}'
