--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -194,10 +194,10 @@ document.addEventListener("DOMContentLoaded", function () {
         data.forEach(cliente => {
           const item = document.createElement("div");
           item.className = "px-3 py-2 hover:bg-blue-100 cursor-pointer text-sm";
-          item.textContent = cliente.cliente;
+          item.textContent = cliente.nombre;
           item.addEventListener("click", function () {
-            input.value = cliente.cliente;
-            clienteIdInput.value = cliente.cliente; // o cliente.id si quieres usar el ID
+            input.value = cliente.nombre;
+            clienteIdInput.value = cliente.nombre; // o cliente.id si quieres usar el ID
             resultados.classList.add("hidden");
           });
           resultados.appendChild(item);
