--- a/ordenes/templates/ordenes.html
+++ b/ordenes/templates/ordenes.html
@@ -257,7 +257,7 @@
       
     </form>
     <!-- Modal Proveedor -->
-      <div id="modalProveedor" class="fixed inset-0 z-50 hidden items-center justify-center bg-black bg-opacity-50">
+      <div id="modalProveedor" class="fixed inset-0 z-50 hidden bg-black bg-opacity-50 flex items-center justify-center">
         <div class="bg-white p-6 rounded-xl shadow-lg w-full max-w-xl">
           <h3 class="text-xl font-semibold mb-4 text-blue-700">Buscar Cliente</h3>
 
