--- a/ordenes/templates/ordenes.html
+++ b/ordenes/templates/ordenes.html
@@ -319,6 +319,7 @@
         document.getElementById("proveedor_id").value = id;
         document.getElementById("proveedor_nombre").value = nombre;
         cerrarModalProveedor();
+        obtenerRecomendaciones(id);
       }
 
       function buscarProveedor(valor) {
