resumen_entrega_recojo

--- a/movimientos/templates/controlrxeventos.html
+++ b/movimientos/templates/controlrxeventos.html
@@ -370,6 +370,7 @@
                             </h5>
                         </div>
                     </div>
+                    {% if dia == 1 %}
                     <div class="row">
                         <div class="col-md-12">
                             <h5>
@@ -377,6 +378,7 @@
                             </h5>
                         </div>
                     </div>
+                    {% endif %}
                 </div>
                 <ul class="nav nav-tabs" id="myTab" role="tablist" style="margin-top: 20px;">
                     <li class="nav-item" role="presentation">
